# polaris-cli-opencatalog-demo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build.sh  generate_notebook.py  notebook_vars.yml  pyproject.toml
notebooks/: verify_setup.ipynb.j2
scripts/: snowflake_integration.sql
